# clang-typelib

./: CMakeLists.txt  README  clang_env.sh  design  extracter.sh  install_clang.sh  printer.sh
PCX/: to_xml.py
PCX/clang/: cindex.py
dummy/: CMakeLists.txt  dummy.cpp  minimal_header.h
extractor/: CMakeLists.txt  Extractor.cpp  Makefile  TypelibBuilder.cpp  TypelibBuilder.hpp  main.cpp
extractor/cmake/modules/: FindLibClang.cmake
extractor2/: CMakeLists.txt  Extractor.cpp
oot/: CMakeLists.txt
test-header-data/: bitfield.h  enums.h  examples.h  typedefs.h
test-header-data/nested_types/: enum_in_struct.h  struct_in_struct.h
